  "python3" under Unix, not "python".

- Issue #15033: Fix the exit status bug when modules invoked using -m swith,
  return the proper failure return value (1). Patch contributed by Jeff Knupp.

- Issue #15229: An OSError subclass whose __init__ doesn't call back
  OSError.__init__ could produce incomplete instances, leading to crashes
  when calling str() on them.
  
Library
-------

- Issue #14635: telnetlib will use poll() rather than select() when possible
  to avoid failing due to the select() file descriptor limit.

- Issue #15180: Clarify posixpath.join() error message when mixing str & bytes

- Issue #15343: pkgutil now includes an iter_importer_modules implementation
  for importlib.machinery.FileFinder (similar to the way it already handled
  zipimport.zipimporter)

- Issue #15314: runpy now sets __main__.__loader__ correctly

- Issue #15357: The import emulation in pkgutil is now deprecated. pkgutil
  uses importlib internally rather than the emulation

- Issue #15233: Python now guarantees that callables registered with
  the atexit module will be called in a deterministic order.

- Issue #15238: shutil.copystat now copies Linux "extended attributes".

- Issue #15230: runpy.run_path now correctly sets __package__ as described
  in the documentation

- Issue #15315: Support VS 2010 in distutils cygwincompiler.

- Issue #15294: Fix a regression in pkgutil.extend_path()'s handling of
  nested namespace packages.

- Issue #15056: imp.cache_from_source() and source_from_cache() raise
  NotImplementedError when sys.implementation.cache_tag is set to None.

- Issue #15256: Grammatical mistake in exception raised by imp.find_module().

- Issue #5931: wsgiref environ variable SERVER_SOFTWARE will specify an
  implementation specific term like Cpython, Jython instead of generic "Python"

- Issue #13248: Remove obsolete argument "max_buffer_size" of BufferedWriter
  and BufferedRWPair, from the io module.
